--- a/css-feladatok-admin/style/style.css
+++ b/css-feladatok-admin/style/style.css
@@ -2,6 +2,8 @@
   background-color: rgb(51, 57, 64);
   fill: rgb(236, 236, 236);
   height: 50px;
+  display: flex;
+  justify-content: space-between;
 }
 .header__title {
   display: inline;
@@ -13,7 +15,7 @@
   border-bottom-left-radius: 4px;
   padding: 0.375rem 0.75rem;
   font-size: 1.2rem;
-  float: right;
+
   height: 50px;
 }
 .header__search:focus {
@@ -32,10 +34,9 @@
 .content {
   background-color: rgb(233, 236, 239);
   padding: 1rem 1.5rem 1.5rem 1rem;
+  width: 100%;
 }
 .card__top {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
 }
 .card--blue {
   background-color: rgb(0, 123, 255);
@@ -48,4 +49,15 @@
 }
 .card--red {
   background-color: rgb(220, 53, 69);
+}
+.main__cards {
+  display: flex;
+  justify-content: space-between;
+}
+.main__card {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+main {
+  display: flex;
 }
