--- a/css-feladatok-admin/style/style.css
+++ b/css-feladatok-admin/style/style.css
@@ -15,7 +15,6 @@
   border-bottom-left-radius: 4px;
   padding: 0.375rem 0.75rem;
   font-size: 1.2rem;
-
   height: 50px;
 }
 .header__search:focus {
@@ -29,12 +28,15 @@
 }
 .main__nav {
   background-color: rgb(33, 37, 41);
-  width: 200px;
+  overflow: auto;
+  height: 100vh;
+  padding-right: 150px;
 }
 .content {
   background-color: rgb(233, 236, 239);
   padding: 1rem 1.5rem 1.5rem 1rem;
   width: 100%;
+  height: 100%;
 }
 .card__top {
 }
@@ -57,7 +59,14 @@
 .main__card {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
+  padding: 25px 80px 75px;
 }
 main {
   display: flex;
+  height: 100vh;
+}
+.main__breadcrumb {
+  background-color: rgba(218, 222, 226, 0.945);
+  border-radius: 5px;
+  padding: 0px 10px 10px 0px;
 }
