--- a/css-feladatok-admin/style/style.css
+++ b/css-feladatok-admin/style/style.css
@@ -1,6 +1,6 @@
 .header--dark {
   background-color: rgb(51, 57, 64);
-  fill: rgb(236, 236, 236);
+  color: rgb(236, 236, 236);
   height: 50px;
   display: flex;
   justify-content: space-between;
@@ -8,6 +8,7 @@
 .header__title {
   display: inline;
   font-size: 1.25rem;
+  padding-top: 15px;
 }
 .header__search {
   display: inline;
@@ -22,21 +23,19 @@
 }
 .search__btn {
   background-color: rgb(0, 123, 255);
-  height: 20px;
-  width: 20px;
   border-radius: 0px 4px 4px 0px;
+  border: 0px;
 }
 .main__nav {
   background-color: rgb(33, 37, 41);
   overflow: auto;
   height: 100vh;
-  padding-right: 150px;
 }
 .content {
   background-color: rgb(233, 236, 239);
   padding: 1rem 1.5rem 1.5rem 1rem;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 .card__top {
 }
@@ -55,11 +54,13 @@
 .main__cards {
   display: flex;
   justify-content: space-between;
+  color: aliceblue;
 }
 .main__card {
   border-radius: 0.25rem;
-
-  padding: 25px 80px 55px;
+  margin: 1rem;
+  width: 100%;
+  padding: 0rem 1rem;
 }
 main {
   display: flex;
@@ -70,4 +71,32 @@ main {
   border-radius: 5px;
   padding: 0px 10px 10px 0px;
   margin-bottom: 30px;
+}
+
+body {
+  margin: 0px;
+}
+
+.nav__ul {
+  width: 150px;
+  list-style-type: none;
+  padding-left: 1rem;
+  color: rgb(236, 236, 236);
+}
+
+.nav__ul li {
+  padding-top: 1rem;
+  font-size: 1.2rem;
+}
+
+.nav__ul a {
+  color: rgb(236, 236, 236);
+  text-decoration: none;
+}
+
+.search__input {
+  padding: 0px;
+}
+.upper {
+  text-transform: uppercase;
 }
